[project]
name = "netto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "overpass>=0.7.2",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "upsetplot>=0.9.0",
]
